--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dsapractice.BruteForce.LC241_PowerOfTwo" hash-for-method="test1">test1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dsapractice.twopointers.LC3_LongestSubstringWithoutRepeat" hash-for-method="test1">test1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dsapractice.BruteForce.LC241_PowerOfTwo</span>
+              <span class="class-name">dsapractice.twopointers.LC3_LongestSubstringWithoutRepeat</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/4t/7gdbt88s2gsgn4z65dqv8vth0000gn/T/testng-eclipse--1168661902/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/4t/7gdbt88s2gsgn4z65dqv8vth0000gn/T/testng-eclipse--1946383851/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;dsapractice.BruteForce.LC241_PowerOfTwo&quot;/&gt;
+      &lt;class name=&quot;dsapractice.twopointers.LC3_LongestSubstringWithoutRepeat&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,13 +187,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test1')
-data.setCell(0, 2, 'dsapractice.BruteForce.LC241_PowerOfTwo')
-data.setCell(0, 3, 9);
+data.setCell(0, 2, 'dsapractice.twopointers.LC3_LongestSubstringWithoutRepeat')
+data.setCell(0, 3, 10);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 ms</span>
+              <span class="suite-total-time">Total running time: 10 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,7 +219,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">dsapractice.BruteForce.LC241_PowerOfTwo</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">dsapractice.twopointers.LC3_LongestSubstringWithoutRepeat</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">test1</span>
                 <span class="method-start">0 ms</span>
